<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:paddingTop="25dp">
        <!--android:theme="@style/LightToolbarThemeOverlay"-->

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="?colorPrimary"
            app:titleEnabled="false">

            <LinearLayout
                android:id="@+id/hero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="?actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">
                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white_aa"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:text="@string/version"
                    android:textColor="@color/white_aa"
                    android:textSize="12sp"/>

                <TextView
                    android:paddingLeft="@dimen/margin_16dp"
                    android:paddingRight="@dimen/margin_16dp"
                    android:text="@string/about_str"
                    android:textSize="@dimen/text_size_16sp"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="@dimen/margin_32dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:navigationIcon="?homeAsUpIndicator"
                app:title="@string/text_menu_about"
                app:titleTextColor="@android:color/white"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:padding="@dimen/margin_16dp"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="1000dp"/>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:clickable="true"
        android:src="@drawable/ic_share_white_24dp"
        app:backgroundTint="@color/accent"
        app:borderWidth="1dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
